--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -21,9 +21,9 @@
 {% endblock %}
 
 {% block body %}
-    <div id="top-link">
-        <a href="#top"><span id="topicon"></span></a>
-    </div>
+    {#<div id="top-link">#}
+        {#<a href="#top"><span id="topicon"></span></a>#}
+    {#</div>#}
 
     {% block top %}
     {% endblock %}
@@ -73,6 +73,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <hr/>
                         </div>
                         {% block content %}
                         {% endblock %}
@@ -147,6 +148,6 @@
     <script src="{{ asset('bundles/sitemain/frontend/scripts/wow.min.js') }}"></script>
     <script src="{{ asset('bundles/sitemain/frontend/scripts/jquery.ripples.js') }}"></script>
     <script src="{{ asset('bundles/sitemain/frontend/scripts/main.js') }}"></script>
-    <script src="{{ asset('bundles/sitemain/frontend/scripts/button.js') }}"></script>
+    {#<script src="{{ asset('bundles/sitemain/frontend/scripts/button.js') }}"></script>#}
     <!-- endbuild -->
 {% endblock %}
