--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -5,6 +5,10 @@ html, body {
   min-height: 100%;
 }
 
+p{
+    font-family: Arial;
+}
+
 /* line 18, ../sass/main.sass */
 .wrap-container-box {
   position: relative;
@@ -36,6 +40,9 @@ header .header-top {
   width: 100%;
   top: 0px;
   z-index: 1;
+}
+header .header-top hr{
+    display: none;
 }
 /* line 40, ../sass/main.sass */
 header .wrap-head1 {
@@ -598,13 +605,19 @@ section .block1 .grid .wrap-box .box .name {
   text-transform: uppercase;
   z-index: 1000;
 }
+hr{
+    position: relative;
+    opacity: 0.37;
+    height: 10px;
+    margin: 20px 0 0 0;
+    background: url('../images/line.png') 0 0 repeat-x;
+}
 /* line 358, ../sass/main.sass */
 section .block2 {
   position: relative;
   text-align: center;
   padding-bottom: 1px;
-  border-top: solid 5px #e5e5e5;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 /* line 362, ../sass/main.sass */
 section .block2 .video {
