--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -22,12 +22,12 @@
     </div>
     <section id="main" class="main">
         <div class="block-1">
-            <h2>Релакс</h2>
+            <h2>Зоны отдыха</h2>
             <div class="grid grid-main">
                 {% for product in productsRelax %}<div class="wrap-box">
                     <div class="box">
                         {% set link = path('frontend_products_one', {'permalink' : product.permalink}) %}
-                        <a href="{{ link }}" class="first" style="background: url('{{ asset(product.webPath) }}');"><img src="{{ asset(product.webPath) }}" alt=""/></a>
+                        <a href="{{ link }}" class="first" style="background: url('{{ image(product.webPath).zoomCrop(246, 157) }}');"><img src="{{ image(product.webPath).zoomCrop(246, 157) }}" alt=""/></a>
                         <a href="{{ link }}" class="name">{{ product.title }}</a>
                     </div>
                     </div>{% endfor %}
