--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -7,6 +7,7 @@ html, body {
 
 p{
     font-family: Arial;
+    font-size: 16px;
 }
 
 /* line 18, ../sass/main.sass */
@@ -39,7 +40,11 @@ header .header-top {
   position: absolute;
   width: 100%;
   top: 0px;
-  z-index: 1;
+  z-index: 1001;
+}
+header .header-top #undefined-sticky-wrapper{
+    width: 100%;
+    z-index: 10000;
 }
 header .header-top hr{
     display: none;
@@ -85,6 +90,11 @@ header .wrap-head1 .head1 ul li.last {
   width: 100%;
 }
 /* line 66, ../sass/main.sass */
+header .wrap-head2{
+    width: 100%;
+    background: #fff;
+}
+
 header .head2 {
   width: 100%;
   height: 130px;
@@ -280,7 +290,7 @@ header .block-1 .grid {
 /* line 143, ../sass/main.sass */
 header .block-1 .grid .wrap-box {
     display: inline-block;
-    width: 33.33%;
+    width: 25%;
     vertical-align: top;
     margin-bottom: 14px;
 }
@@ -361,6 +371,7 @@ header .container .menu-left {
   -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   margin: 20px auto 0 auto;
+    top: 180px;
   left: -904px;
   right: 0px;
 }
@@ -412,13 +423,13 @@ header .container .menu-left > ul.current > a {
 /* line 228, ../sass/main.sass */
 header .content, header .content_portfolio {
   width: 100%;
-  padding: 0px;
+  padding: 141px 0 0 0;
   margin: 0px;
   background: #fff;
 }
 /* line 233, ../sass/main.sass */
 header .content .wrap_head, header .content_portfolio .wrap_head {
-  padding-top: 29px;
+  padding-top: 158px;
   background: #fff;
 }
 /* line 236, ../sass/main.sass */
@@ -607,6 +618,7 @@ section .block1 .grid .wrap-box .box .name {
 }
 hr{
     position: relative;
+    top: 0px;
     opacity: 0.37;
     height: 10px;
     margin: 20px 0 0 0;
@@ -868,7 +880,7 @@ footer .wrap-footer1 .footer1 span {
 }
 /* line 511, ../sass/main.sass */
 .st-menu p {
-  font-size: 14px;
+  font-size: 16px;
   color: #000;
   margin: 20px 0px;
   padding: 0;
