--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -56,11 +56,12 @@ header .wrap-head1 {
 }
 /* line 43, ../sass/main.sass */
 header .wrap-head1 .head1 {
-  width: 100%;
-  max-width: 865px;
-  height: 50px;
-  line-height: 50px;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 1070px;
+    height: 50px;
+    line-height: 50px;
+    margin: 0 auto;
+    padding: 0 23px;
 }
 /* line 49, ../sass/main.sass */
 header .wrap-head1 .head1 ul {
@@ -100,7 +101,7 @@ header .head2 {
   height: 130px;
   max-width: 1070px;
   margin: 0 auto;
-  padding: 0px 47px 0px 47px;
+  padding: 0px 23px;
 }
 /* line 72, ../sass/main.sass */
 header .head2 .logo {
@@ -122,7 +123,7 @@ header .head2 div.right {
   display: table-cell;
   vertical-align: middle;
   width: 100%;
-  padding-left: 29px;
+  padding-left: 50px;
 }
 /* line 88, ../sass/main.sass */
 header .head2 div.right div.top {
@@ -366,13 +367,13 @@ header .container .menu-left {
   width: 268px;
   position: fixed;
   padding: 13px 18px 3px 30px;
-  background: #fff;
-  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
-  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
+  /*background: #fff;*/
+  /*-moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);*/
+  /*-webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);*/
+  /*box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);*/
   margin: 20px auto 0 auto;
     top: 180px;
-  left: -904px;
+  left: -835px;
   right: 0px;
 }
 @media (max-width: 1200px) {
