--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -34,6 +34,33 @@
             </div>
             <hr/>
         </div>
+        <div class="block0">
+            <h2>почему стоит выбрать нас?</h2>
+            <div class="grid">
+                <div class="wrap-box">
+                    <div class="box">
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt="" width="127px" height="124px"/>
+                        <div class="name">опыт 15 лет</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt="" width="130px" height="124px"/>
+                        <div class="name">клиенты - первые лица страны</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt="" width="109px" height="124px"/>
+                        <div class="name">гарантия на все виды работ</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img class="wow fadeIn" src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt="" width="89px" height="133px"/>
+                        <div class="name last">постэксплуатационное обслуживание</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="line-video-border"></div>
         <div class="block2">
             <div class="video"></div>
             <h2>Отзывы</h2>
